--- a/app/web/caretaker-controlpanel/widgets/caretaker-widget-dimmerrgbdevice.less
+++ b/app/web/caretaker-controlpanel/widgets/caretaker-widget-dimmerrgbdevice.less
@@ -3,59 +3,65 @@ paper-slider {
 }
 
 paper-slider#red::shadow {
-  #sliderKnobInner {
-    background-color: #b00510;
-    width: 24px;
-    height: 24px;
+  #sliderKnob {
+    width: 38px;
+    height: 38px;
   }
 
-  #sliderBar::shadow #activeProgress {
+  #sliderKnobInner {
+    background-color: #b00510;
+  }
+
+  #sliderBar::shadow #primaryProgress {
     background-color: #b00510;
   }
 
   /deep/ #progressContainer {
     background-color: #444444;
-    top: -4px;
+    top: -2px;
     height: 10px;
-    border-radius: 4px;
   }
 }
 
 paper-slider#green::shadow {
-  #sliderKnobInner {
-    background-color: #2aa300;
-    width: 24px;
-    height: 24px;
+  #sliderKnob {
+    width: 38px;
+    height: 38px;
   }
 
-  #sliderBar::shadow #activeProgress {
+  #sliderKnobInner {
+    background-color: #2aa300;
+  }
+
+  #sliderBar::shadow #primaryProgress {
     background-color: #2aa300;
   }
 
   /deep/ #progressContainer {
     background-color: #444444;
-    top: -4px;
+    top: -2px;
     height: 10px;
-    border-radius: 4px;
   }
 }
 
 paper-slider#blue::shadow {
-  #sliderKnobInner {
-    background-color: #1800bc;
-    width: 24px;
-    height: 24px;
+  #sliderKnob {
+    width: 38px;
+    height: 38px;
   }
 
-  #sliderBar::shadow #activeProgress {
+  #sliderKnobInner {
+    background-color: #1800bc;
+  }
+
+  #sliderBar::shadow #primaryProgress {
     background-color: #1800bc;
   }
 
   /deep/ #progressContainer {
     background-color: #444444;
-    top: -4px;
+    top: -2px;
     height: 10px;
-    border-radius: 4px;
   }
 }
 
